feat: add question subscriber swagger
